# mpvserve

./: .gitignore  Cargo.toml  README.md  Rocket.toml
public/: main.css
scripts/: build_wrapper_macos.sh  install_wrapper_linux.sh  package_service_tarball.sh  packge_debian_service_tarball_in_docker.sh  packge_service_tarball_in_docker.sh
scripts/debian-stretch-build/: Dockerfile
scripts/ubuntu-focal-build/: Dockerfile
src/: db.rs  http.rs  main.rs  reading_dirs.rs  tracked_file_stream.rs  utils.rs
src/db/: movie_servings.rs  prelude.rs
src/db/migration/: Cargo.toml
src/db/migration/src/: m20220101_000001_create_table.rs
templates/: error.hbs  index.hbs
wrapper/: MpvWrapper.desktop  mpv_icon.icns  mpv_wrapper.sh
