[package]
name = "mpvserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.5.0-rc.2"
serde = { version = "^1.0", features = ["derive"] }
log = "^0.4.17"
clap = { version = "^3", features = ["derive"] }
urlencoding = "2.1.0"
rocket_dyn_templates = {version = "^0.1.0-rc.2", features = ["handlebars"]}
rocket_seek_stream = {git="https://github.com/StappsWorld/rocket_seek_stream"}
